--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 body
 {
-  color: blue;
+  color: #333;
   text-align: center;
-  font-family: "Arial";
+  font-family: Arial;
   font-size: 16px;
   margin: 0;
   padding: 0;
@@ -42,4 +42,12 @@ body
 #post
 {
   padding: 1em;
+}
+
+#footer
+{
+  background: #777;
+  color: white;
+  text-align: center;
+  padding: 0.5em;
 }
