--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@ body
 
 #cabecera
 {
-  background: #33a;
+  background: #37488b;
   box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
   color: white;
   font-weight: bold;
@@ -53,7 +53,7 @@ body
 
 #footer
 {
-  background: #777;
+  background: #37488b;
   color: white;
   text-align: center;
   padding: 0.5em;
